<resources>
    <string name="app_name">Sign In And Sign Up</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">Email</string>
    <string name="confirm_password">Confirm Password</string>
</resources>